infrastructure/kubernetes/ingress/production/ingress-hello-world.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: fnhs.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /hello
            backend:
              serviceName: hello-world
              servicePort: 80
  tls:
    - hosts:
        - fnhs.westeurope.cloudapp.azure.com
      secretName: fnhs.westeurope.cloudapp.azure.com
