infrastructure/kubernetes/ingress/production/ingress-kratos.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: kratos
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: fnhs.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /.ory/kratos/public(/|$)(.*)
            backend:
              serviceName: kratos-public
              servicePort: 80
  tls:
    - hosts:
        - fnhs.westeurope.cloudapp.azure.com
      secretName: fnhs.westeurope.cloudapp.azure.com
