infrastructure/kubernetes/ingress/production/ingress-workspace-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: workspace-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: beta.future.nhs.uk
      http:
        paths:
          - path: /workspace-service
            backend:
              serviceName: workspace-service
              servicePort: 80
  tls:
    - hosts:
        - beta.future.nhs.uk
      secretName: beta.future.nhs.uk
